Sat Mar  5 12:14:27 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/gnuace.features:
          Set qt4 instead of qt to default 1

        * include/makeinclude/platform_g++_common.GNU:
          Also don't use strict aliasing with gcc 4.2/4.3

Sat Mar  5 07:16:12 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-linux.h:
          Removed some GLIBC 2.1 related settings.

Fri Mar  4 16:00:26 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-freebsd.h:
        * include/makeinclude/platform_freebsd.GNU:
          Threads related cleanup.

Fri Mar  4 14:54:49 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_signal.h:
          OpenBSD needs os_pthread.h to pick up pthread_sigmask().

        * ace/config-openbsd.h:
        * include/makeinclude/platform_openbsd.GNU:
          Threads related cleanup.

Fri Mar  4 12:39:39 UTC 2011  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_linux_icc.GNU:
          Fixed linking problems.

Thu Mar  3 15:49:52 UTC 2011  Steve Huston  <shuston@riverace.com>

        * ace/config-win32-common.h: Ensure that _AMD64_ is defined for
          both MPC and non-MPC projects built for 64-bit Windows.

Thu Mar  3 12:22:30 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao.spec:
          Further improvements to this file, thanks to Glenn Zickert
          <gzickert at comcast dot net> for reporting these

Wed Mar  2 20:56:42 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-linux-common.h:
          Removed some ancient settings.

Wed Mar  2 12:42:58 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-linux-common.h:
        * ace/config-linux.h:
        * include/makeinclude/platform_linux.GNU:
        * include/makeinclude/platform_linux_common.GNU:
          Simplified setting of ACE_HAS_AIO_CALLS.

Tue Mar  1 11:31:55 UTC 2011  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_linux.GNU: