@@ -1,3 +1,15 @@
+Sat Mar  5 17:31:08 UTC 2011  Olli Savia  <ops@iki.fi>
+
+        * ace/config-freebsd.h:
+          Minor layout changes.
+
+        * ace/config-openbsd.h:
+          Define MT_SAFE. Minor layout changes.
+
+        * ace/config-macros.h:
+          Do not define _REENTRANT. It should be defined in platform
+          specific files if needed.
+
 Sat Mar  5 12:14:27 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * bin/MakeProjectCreator/config/gnuace.features:
